--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <!--<string name="app_id">3ZLW/TAqPvR43Zh79ejFQDOdka8=</string>-->
     <string name="app_id">814586241935315</string>
+    <string name="settings">Settings</string>
 
 </resources>
